--- a/B8 Gacha.html
+++ b/B8 Gacha.html
@@ -195,7 +195,6 @@
         }
 
         .arlert {
-            display: none;
             position: fixed;
             width: 240px;
             height: 240px;
@@ -207,17 +206,28 @@
             z-index: 2;
             border-radius: 20px;
             color: white;
+            transition: opacity 0.4s ease, scale 0.4s ease;
         }
 
         .overlay {
-            display: none;
             position: fixed;
             top: 0;
             left: 0;
             width: 100%;
             height: 100%;
-            background: rgba(0, 0, 0, 0.05);
+            background: rgba(0, 0, 0, 0.1);
             z-index: 1;
+            transition: opacity 0.1s ease;
+        }
+
+        .hide {
+            opacity: 0;
+            scale: 0;
+        }
+
+        .show {
+            scale: 1;
+            opacity: 1;
         }
 
         .numberr {
@@ -253,14 +263,14 @@
         <div id="gameSection" style="display:none;">
             <p> Type 0 - <span id="maxNumber"></span> or</p>
             <div id="numberOptions"></div>
-            <div id="arlert" class="arlert">
-                <div class="noti">Congratulations</div>
-                <div id="noticnt"></div>
-            </div>
         </div>
         <p id="message"></p>
     </div>
-    <div id="overlay" class="overlay"></div>
+    <div id="overlay" class="overlay hide"></div>
+    <div id="arlert" class="arlert hide">
+        <div class="noti">Congratulations</div>
+        <div id="noticnt"></div>
+    </div>
     <script src="B8 Gacha.js"></script>
 </body>
 
