--- a/Total-Tool.html
+++ b/Total-Tool.html
@@ -110,7 +110,7 @@
                 <i class="fa fa-caret-down"></i>
             </button>
             <div class="dropdown-content">
-                <a href="https://arisu171.github.io/Long.D.Shine/Home.html">Home</a>
+                <a href="https://arisu171.github.io/Long.D.Shine/Home.html">B1 js</a>
                 <a href="https://arisu171.github.io/Long.D.Shine/B8 Min-Max.html">Max-Min</a>
                 <a href="https://arisu171.github.io/Long.D.Shine/B8 Gacha.html">Gacha</a>
             </div>
