--- a/B9 Banner.html
+++ b/B9 Banner.html
@@ -11,17 +11,21 @@
 
 <body>
     <div class="homebanner">
-        <img src="Banner1.jpg" alt="" class="bannerimg" id="bannerimg1">
-        <img src="Banner2.jpg" alt="" class="bannerimg" id="bannerimg2">
-        <img src="Banner3.jpg" alt="" class="bannerimg" id="bannerimg3">
-        <img src="Banner4.jpg" alt="" class="bannerimg" id="bannerimg4">
-        <img src="Banner5.jpg" alt="" class="bannerimg" id="bannerimg5">
-        <div class="bannercontrol"><i class="fa-solid fa-circle-chevron-left"></i></div>
-        <div class="bannercontrol"><i class="fa-solid fa-circle-chevron-right"></i></div>
+        <img src="Banner1.jpg" alt="" class="bannerimg" id="bannerimg0">
+        <img src="Banner2.jpg" alt="" class="bannerimg" id="bannerimg1">
+        <img src="Banner5.jpg" alt="" class="bannerimg" id="bannerimg-1">
+        <div class="bannercontrol" id="bannercontrolprev" onclick="prev()">
+            <i class="fa-solid fa-circle-chevron-left"></i>
+        </div>
+        <div class="bannercontrol" id="bannercontrolnext" onclick="next()">
+            <i class="fa-solid fa-circle-chevron-right"></i>
+        </div>
         <div class="bannercurrent">
             <div id="bannercurent1"><i class="fa-solid fa-circle"></i></div>
             <div id="bannercurent2"><i class="fa-regular fa-circle"></i></i></div>
             <div id="bannercurent3"><i class="fa-regular fa-circle"></i></i></div>
+            <div id="bannercurent4"><i class="fa-regular fa-circle"></i></i></div>
+            <div id="bannercurent5"><i class="fa-regular fa-circle"></i></i></div>
         </div>
     </div>
     <script src="B9 Banner.js"></script>
