--- a/Home.html
+++ b/Home.html
@@ -22,27 +22,27 @@
             <div class="navtitle">Project</div>
             <div class="navtitle">Contact</div>
         </div>
-        <div class="navbutton navradius" id="navbutt">
-            <div class="navicon" id="navicon"><i class="fa-solid fa-bars"></i></div>
-            <div class="navitem">
+        <div class="navbutton navradius navhide hide" id="navbutt" onclick="shownav()">
+            <div class="navicon navhide" id="navicon"><i class="fa-solid fa-bars"></i></div>
+            <div class="navitem navhide">
                 <a href="#bannerimg1">
                     <i class="fa-solid fa-house"></i>
                     <div class="navitcap">Home</div>
                 </a>
             </div>
-            <div class="navitem">
+            <div class="navitem navhide">
                 <i class="fa-solid fa-user"></i>
                 <div class="navitcap">About Us</div>
             </div>
-            <div class="navitem">
+            <div class="navitem navhide">
                 <i class="fa-solid fa-code"></i>
                 <div class="navitcap">Skill</div>
             </div>
-            <div class="navitem">
+            <div class="navitem navhide">
                 <i class="fa-solid fa-diagram-project"></i>
                 <div class="navitcap">Project</div>
             </div>
-            <div class="navitem">
+            <div class="navitem navhide">
                 <i class="fa-solid fa-address-book"></i>
                 <div class="navitcap">Contact</div>
             </div>
@@ -69,7 +69,7 @@
             <br><br><br>
         </div>
     </div>
-
+    <script src="Home-nav.js"></script>
     <script src="Home.js"></script>
 
 </body>
