--- a/B9 Banner.html
+++ b/B9 Banner.html
@@ -10,7 +10,8 @@
 </head>
 
 <body>
-    <div class="homebanner" onload="load_banner();">
+    <h1>@Coppyright by Orias!</h1>
+    <div class="homebanner" id="homebanner" onload="load_banner();">
         <img src="Banner1.jpg" alt="" class="bannerimg bannerimg1" id="bannerimg1">
         <img src="Banner2.jpg" alt="" class="bannerimg bannerimg2" id="bannerimg2">
         <img src="Banner3.jpg" alt="" class="bannerimg bannerimg3" id="bannerimg3">
