--- a/Total-Tool.html
+++ b/Total-Tool.html
@@ -115,6 +115,16 @@
                 <a href="https://arisu171.github.io/Long.D.Shine/B8 Gacha.html">Gacha</a>
             </div>
         </div>
+        <div class="dropdown">
+            <button class="dropbtn"> Week 9
+                <i class="fa fa-caret-down"></i>
+            </button>
+            <div class="dropdown-content">
+                <a href="https://arisu171.github.io/Long.D.Shine/B9 Form.html">Form</a>
+                <a href="https://arisu171.github.io/Long.D.Shine/B9 Banner.html">Banner</a>
+                <a href="https://arisu171.github.io/Long.D.Shine/B9 CALC.html">CALC</a>
+            </div>
+        </div>
 
 </body>
 
